forms code added

--- a/Semester - 3/Course 07  Software Engineering Project (2 Credits)/Week 01 Getting Start With Django/Module 04 Working with forms in Django/fifth_project/first_app/templates/first_app/form.html
+++ b/Semester - 3/Course 07  Software Engineering Project (2 Credits)/Week 01 Getting Start With Django/Module 04 Working with forms in Django/fifth_project/first_app/templates/first_app/form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 {% block title %} Form page {% endblock %} 
 {% block content %}
-{% comment %} here action means we are sending it to about page {% endcomment %}
+{% comment %} here action means we are sending it to about page and in get method action is not needed {% endcomment %}
 <div style="width: 50%; height: 500px; margin: auto" class="pt-5">
   <h3> Movie Rating Form </h3>
   <form method="post" action="/first_app/about/">
