--- a/Semester - 3/Course 07  Software Engineering Project (2 Credits)/Week 01 Getting Start With Django/Module 04 Working with forms in Django/fifth_project/templates/base.html
+++ b/Semester - 3/Course 07  Software Engineering Project (2 Credits)/Week 01 Getting Start With Django/Module 04 Working with forms in Django/fifth_project/templates/base.html
@@ -42,6 +42,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'submit_form' %}">Form</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'django_form' %}">Django Form</a>
+            </li>
           </ul>
           <form class="d-flex" role="search">
             <input
@@ -57,7 +60,7 @@
         </div>
       </div>
     </nav>
-    <h1>{% block content %} {%endblock%}</h1>
+    <h5>{% block content %} {%endblock%}</h5>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
