--- a/Semester - 3/Course 07  Software Engineering Project (2 Credits)/Week 02 Deep Dive into Django/Module 05 Working with Models and Modelform in Django/sixth_project/first_app/templates/home.html
+++ b/Semester - 3/Course 07  Software Engineering Project (2 Credits)/Week 02 Deep Dive into Django/Module 05 Working with Models and Modelform in Django/sixth_project/first_app/templates/home.html
@@ -4,8 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <h1>Home page</h1>
+    {% if data %}
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th scope="col">Roll</th>
+          <th scope="col">Student Name</th>
+          <th scope="col">Father's Name</th>
+          <th scope="col">Address</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for st in data %}
+        <tr>
+          <td>{{st.roll}}</td>
+          <td>{{st.name}}</td>
+          <td>{{st.father_name}}</td>
+          <td>{{st.address}}</td>
+          <td>
+            <a
+              class="btn btn-danger text-white"
+              href="{% url 'delete_student' st.roll %}"
+              >Delete</a
+            >
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {% else %}
+    <h3>No data available to show</h3>
+    {% endif %}
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
