module 09 first video

--- a/Semester - 3/Course 07 Software Engineering Project (2 Credits)/Week 03 Class Based View and REST API/Module 09 Class Based View/book_store_management_system/book/templates/base.html
+++ b/Semester - 3/Course 07 Software Engineering Project (2 Credits)/Week 03 Class Based View and REST API/Module 09 Class Based View/book_store_management_system/book/templates/base.html
@@ -76,7 +76,7 @@
       <div class="centered-container">
         <div class="centered-content">
           <h1>Welcome to Bright Ideas Book Store</h1>
-          <h3>One stop solution of your library</h3>
+          <h3>One stop solution of your Book Business</h3>
         </div>
       </div>
       {% endblock %}
