--- a/Semester - 3/Course 07 Software Engineering Project (2 Credits)/Week 03 Class Based View and REST API/Module 09 Class Based View/book_store_management_system/book/templates/base.html
+++ b/Semester - 3/Course 07 Software Engineering Project (2 Credits)/Week 03 Class Based View and REST API/Module 09 Class Based View/book_store_management_system/book/templates/base.html
@@ -47,7 +47,9 @@
       <!-- Bootstrap Navbar -->
       <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Bright Ideas Book Store</a>
+          <a class="navbar-brand" href="{% url 'homepage' %}"
+            >Bright Ideas Book Store</a
+          >
           <button
             class="navbar-toggler"
             type="button"
