--- a/Semester - 3/Course 07 Software Engineering Project (2 Credits)/Week 03 Class Based View and REST API/Module 09 Class Based View/book_store_management_system/book/templates/show_book.html
+++ b/Semester - 3/Course 07 Software Engineering Project (2 Credits)/Week 03 Class Based View and REST API/Module 09 Class Based View/book_store_management_system/book/templates/show_book.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div style="width: 50%; margin: auto; text-align: center">
   <h1>Available Books</h1>
-  {% if data %}
+  {% if book_list %}
 </div>
 <div style="width: 80%; margin: auto; text-align: center">
   <table class="table table-bordered table-primary">
@@ -13,14 +13,14 @@
         <th scope="col">Book Name</th>
         <th scope="col">Author Name</th>
         <th scope="col">Category</th>
-        <th scope="col">First Publication</th>
-        <th scope="col">Last Publication</th>
+        <th scope="col">Entry Date</th>
+        <th scope="col">Last Edition</th>
         <th scope="col">Update</th>
         <th scope="col">Delete</th>
       </tr>
     </thead>
     <tbody>
-      {% for item in data %}
+      {% for item in book_list %}
       <tr>
         <th scope="row">{{item.id}}</th>
         <td>{{item.book_name}}</td>
